<resources>
    <string name="app_name">NÖ Finderlein</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_list_all_dest">Alle Ziele</string>
    <string name="main_menu_list_map">Ziele auf der Karte anzeigen</string>
    <string name="main_menu_list_near_dest">Nahe Ziele auflisten</string>
    <string name="main_menu_list_region_dest">Ziele nach Regionen auflisten</string>
    <string-array name="main_menu_list">
        <item>@string/main_menu_list_all_dest</item>
        <item>@string/main_menu_list_map</item>
        <item>@string/main_menu_list_near_dest</item>
        <item>@string/main_menu_list_region_dest</item>
    </string-array>
    <string name="region_list_all_regions">Alle Regionen/Alle Ziele</string>
    <string name="region_list_near">Nahe Ziele</string>
    <string name="region_list_donau_noe">Donau Niederösterreich</string>
    <string name="region_list_mostviertel">Mostviertel</string>
    <string name="region_list_waldviertel">Waldviertel</string>
    <string name="region_list_weinviertel">Weinviertel</string>
    <string name="region_list_wiener_alpen">Wiener Alpen in Niederösterreich</string>
    <string name="region_list_wienerwald">Wienerwald</string>
    <string name="region_list_wien">Wien</string>
    <string name="region_list_steiermark">Steiermark</string>
    <string name="region_list_burgenland">Burgenland</string>
    <string name="region_list_oberoesterreich">Oberösterreich</string>
    <string-array name="region_list">
        <item>@string/region_list_all_regions</item>
        <item>@string/region_list_donau_noe</item>
        <item>@string/region_list_mostviertel</item>
        <item>@string/region_list_waldviertel</item>
        <item>@string/region_list_weinviertel</item>
        <item>@string/region_list_wiener_alpen</item>
        <item>@string/region_list_wienerwald</item>
        <item>@string/region_list_wien</item>
        <item>@string/region_list_steiermark</item>
        <item>@string/region_list_burgenland</item>
        <item>@string/region_list_oberoesterreich</item>
    </string-array>
    <string name="download_button">Download</string>
    <string name="title_location_list">Ziele</string>
    <string name="title_location_detail">Ziel Detail</string>
    <string name="title_location_region_list">@string/main_menu_list_region_dest</string>
    <string name="title_location_distance_list">@string/main_menu_list_near_dest</string>
    <string name="title_karte_map">@string/main_menu_list_map</string>
    <string name="desc_icon_kinderwagengerecht">Kinderwagengerecht</string>
    <string name="desc_icon_hunde">Hunde erlaubt</string>
    <string name="desc_icon_rollstuhl">Rollstuhlgerecht</string>
    <string name="desc_icon_gruppe">Gruppe</string>
    <string name="desc_telephone"><b>Tel.: </b></string>
    <string name="desc_tipp">Tipp</string>
    <string name="desc_geoeffnet">Geöffnet</string>
    <string name="desc_anreise">Anreise</string>
    <string name="desc_latitude"><b>Latitude: </b></string>
    <string name="desc_longitude"><b>Longitude: </b></string>
    <string name="detail_coordinates_title">Koordinaten</string>
    <string name="desc_email"><b>Email: </b></string>
    <string name="desc_webseite"><b>Webseite: </b></string>
    <string name="desc_aussersonder">*außer Sonderveranstaltungen</string>
    <string name="title_menu_to_destination">Zum Ziel navigieren</string>
    <string name="title_menu_show_on_map">Auf der Karte anzeigen</string>
    <string name="title_menu_show_current_on_map">Aktuelle Liste auf der Karte anzeigen</string>
    <string name="toast_no_geo_app_found">Keine App für GEO Daten gefunden - Bitte Google Maps installieren</string>
    <string name="title_menu_filter">Liste Filtern</string>
    <string name="title_menu_search">In Liste suchen</string>
    <string name="title_menu_refresh">Liste aktualisieren</string>
    <string name="test_blabla">blablablablablabla</string>
    <string name="filter">Filter Setzen</string>
    <string name="cancel">Abbrechen</string>
    <string name="nothing"></string>
    <string name="filter_typ_top">Top\nAusflugsziel</string>
    <string name="filter_typ_stifte">Stifte</string>
    <string name="filter_typ_burguschloess">Burgen und\nSchlösser</string>
    <string name="filter_typ_museenuausstell">Museen und\nAusstellungen</string>
    <string name="filter_typ_erlunatur">Erlebnis und\nNaturparks</string>
    <string name="filter_typ_sportufreiz">Sport und\nFreizeit</string>
    <string name="filter_typ_bergbahnen">Bergbahnen</string>
    <string name="filter_typ_schiffahrt">Schiffahrt</string>
    <string name="filter_typ_lokalbahn">Lokalbahn</string>
    <string name="filter_all_OnOf">Alle aktivieren\ndeaktivieren</string>
    <string-array name="filter_typ_list">
        <item>@string/filter_typ_top</item>
        <item>@string/filter_typ_stifte</item>
        <item>@string/filter_typ_burguschloess</item>
        <item>@string/filter_typ_museenuausstell</item>
        <item>@string/filter_typ_erlunatur</item>
        <item>@string/filter_typ_sportufreiz</item>
        <item>@string/filter_typ_bergbahnen</item>
        <item>@string/filter_typ_schiffahrt</item>
        <item>@string/filter_typ_lokalbahn</item>
        <item>@string/filter_typ_hund</item>
        <item>@string/filter_typ_rollstuhl</item>
        <item>@string/filter_typ_kinderwagen</item>
        <item>@string/filter_typ_gruppe</item>
    </string-array>
    <string name="preferences_file_key">at.derqurps.noecard.PREFERENCES_G</string>
    <string name="hint_no_network_location">Keine Netzwerk-Geodaten verfügbar...</string>
    <string name="hint_gps_and_network_disabled">GPS und Netzwerk Geodaten abgeschaltet</string>
    <string name="disclaimer">Der Programmierer dieser App übernimmt keine Garantie auf die Richtigkeit der verwendeten Daten. Falls Sie fortfahren diese APP zu nutzen, bestätigen Sie, dass Ihnen das bewusst ist.</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_button_agree">Einverstanden</string>
    <string name="button_send_changes">Änderung senden</string>
    <string name="disclaimer_button_disagree">Abbrechen</string>
    <string name="title_activity_image_viewer_fullscreen">ImageViewer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="checkin_with_foursquare">Mit Foursquare einchecken</string>
    <string name="toast_foursquare_app_found">Keine Check-IN APP gefunden</string>
    <string name="pref_title_download_new">Daten aktualisieren</string>
    <string name="pref_description_download_new">Aktualisierungen aus dem Internet abrufen</string>
    <string name="overwrite_year_summary">Soll der automatische Jahreswechsel ausgeschaltet werden?</string>
    <string name="overwrite_year_title">Manuelles Jahr</string>
    <string name="str_navdraw_show_data">Alle</string>
    <string name="str_settings">Einstellungen</string>
    <string name="str_nav_draw_act_year_descr">Gewähltes Jahr:</string>
    <string name="str_infoficial_app">Inoffizielle Niederösterreich-CARD-App</string>
    <string name="str_man_year">Manuelles Jahr wählen</string>
    <string name="str_dialog_jahr_waehlen">Jahr wählen</string>
    <string name="str_chosen_year">gewähltes Jahr: </string>
    <string name="str_navdraw_destinations">Ziele</string>
    <string name="str_navdraw_favorites">Favoriten</string>
    <string name="str_navdraw_nahe_ziele">Nahe</string>
    <string name="str_navdraw_besichtigte_ziele">Besichtigte</string>
    <string-array name="navigation_draw_list">
        <item>@string/str_navdraw_show_data</item>
        <item>@string/str_navdraw_favorites</item>
        <item>@string/str_navdraw_besichtigte_ziele</item>
        <item>@string/str_navdraw_nahe_ziele</item>
        <item>@string/str_settings</item>
    </string-array>
    <string name="str_2014_val">2014</string>
    <string name="str_2015_val">2015</string>
    <string name="str_2016_val">2016</string>
    <string name="str_2017_val">2017</string>
    <string name="str_2018_val">2018</string>
    <string name="str_2019_val">2019</string>
    <string-array name="pref_year_val">
        <item>@string/str_2014_val</item>
        <item>@string/str_2015_val</item>
        <item>@string/str_2016_val</item>
        <item>@string/str_2017_val</item>
        <item>@string/str_2018_val</item>
        <item>@string/str_2019_val</item>
    </string-array>
    <string name="str_2014">2014/2015</string>
    <string name="str_2015">2015/2016</string>
    <string name="str_2016">2016/2017</string>
    <string name="str_2017">2017/2018</string>
    <string name="str_2018">2018/2019</string>
    <string name="str_2019">2019/2020</string>
    <string name="title_menu_favorit">Ziel zu Favoriten hinzufügen</string>
    <string name="title_menu_visited">Ziel als besichtigt markieren</string>
    <string name="desc_koordinaten">Koordinaten</string>
    <string name="desc_adresse_koordinaten">Adresse/Koordinaten</string>
    <string name="filter_typ_hund">Hunde erlaubt</string>
    <string name="filter_typ_rollstuhl">Rollstuhl-gerecht</string>
    <string name="filter_typ_kinderwagen">Kinderwagen-gerecht</string>
    <string name="filter_typ_gruppe">Noecard gilt auch bei Gruppen</string>
    <string name="title_authenticationclass">Authentifizierung</string>
    <string name="detail_send_picture">Foto senden</string>
    <string-array name="pref_year">
        <item>@string/str_2014</item>
        <item>@string/str_2015</item>
        <item>@string/str_2016</item>
        <item>@string/str_2017</item>
        <item>@string/str_2018</item>
        <item>@string/str_2019</item>
    </string-array>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more...</string>
    <string name="send_new_photo">Neues Foto senden</string>
    <string name="about">Über</string>
    <string name="close">Schließen</string>
    <string name="enable">Einschalten</string>
    <string name="enable_location_services">Positionsbestimmung einschalten</string>
    <string name="visitedChecked">Zu Besichtigten hinzugefügt</string>
    <string name="visitedNotChecked">Eintrag schon hinzugefügt</string>
    <string name="visitedChooseWhen">Für welchen tag abhaken?</string>
    <string name="deleteVisited">Besichtigten Eintrag löschen?</string>
    <string name="visitedtoday">Heute</string>
    <string name="visitedchoose">Auswählen</string>
    <string name="error_year_not_found_in_database">Jahr in lokaler Datenbank nicht gefunden...</string>
    <string name="error_no_location_services">Keine Positionsbestimmung eingeschalten. Die App funktioniert auch ohne Ortsbestimmung, aber die "nahen Ziele" werden nicht funktionieren</string>
    <string name="error_no_location_services_en">No Location Services Enabled. You can use this App without Location Services, but the near Destinations feature will not work.</string>
    <string name="location_updated_message">Location successful aquired</string>
    <string name="location_updated_stopped">Location updates stopped.</string>
    <string name="location_updated_started">Acquiring location...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_notifications">Notifications</string>
</resources>