<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:noecard="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionb_destination_visited"
        android:icon="@drawable/ic_check"
        noecard:showAsAction="always|collapseActionView"
        android:title="@string/title_menu_visited"
        />
    <item
        android:id="@+id/actionb_favorit_star"
        android:icon="@drawable/ic_star_outline"
        noecard:showAsAction="always|collapseActionView"
        android:title="@string/title_menu_favorit"
        />
    <item
        android:id="@+id/actionb_navigate_to_dest"
        android:icon="@drawable/ic_navigation"
        noecard:showAsAction="ifRoom|collapseActionView"
        android:title="@string/title_menu_to_destination"
        />
	<item
        android:id="@+id/actionb_show_in_map"
        android:icon="@drawable/ic_mini_world_map"
        noecard:showAsAction="ifRoom|collapseActionView"
        android:title="@string/title_menu_show_on_map"
        />
    <item
        android:id="@+id/actionb_upload_picture"
        android:icon="@drawable/ic_add_a_photo"
        noecard:showAsAction="ifRoom|collapseActionView"
        android:title="@string/title_menu_add_photo"
        />

</menu>