<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="at.qurps.noefinderlein.app.Activity_Settings$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black"
        android:title="@string/pref_header_general"/>

    <header
        android:fragment="at.qurps.noefinderlein.app.Activity_Settings$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications"/>

    <header
        android:fragment="at.qurps.noefinderlein.app.Activity_Settings$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync"/>

</preference-headers>
