<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:noecard="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_list_actionbar"
        noecard:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search"
        noecard:showAsAction="always|collapseActionView"
        android:title="@string/title_menu_search"/>
    <item
        android:id="@+id/actionb_filter_list"
        android:icon="@drawable/ic_filter"
        noecard:showAsAction="always|collapseActionView"
        android:title="@string/title_menu_filter"
        />
    <item
        android:id="@+id/actionb_show_current_in_map"
        android:icon="@drawable/ic_map"
        noecard:showAsAction="always|collapseActionView"
        android:title="@string/title_menu_show_current_on_map"
        />
</menu>